# apim-gitops-reference-hub

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/scripts/: __init__.py  _common.py  backend_allowlist.py  base_inheritance.py  freeze_workspace.py  inventory.py  kv_uri_allowlist.py  naming_convention.py  path_scope.py  run_all.py  secret_scan.py  tier_check.py  versioning.py
.github/workflows/: drift-fanout.yml  extractor-drift.yml  pr-validation.yml  publisher.yml  reusable-checks.yml  team-publish.yml  terraform-validate.yml  tests.yml
apim-config/service/: policy.xml
backends/stub_orders_api/: README.md  function_app.py
config/: ci.json
docs/: IMPLEMENTATION_GUIDE.md  azure_devops_parity.md  demo_runbook.md  multi_repo_hub_and_spoke.md  reference_architecture.md  versioning_policy.md
docs/diagrams/: 01_repo_topology.mmd  02_gitops_pipeline.mmd  03_ci_checks.mmd  04_terraform_modules.mmd  05_workspace_topology.mmd  06_identity_rbac.mmd  07_defence_in_depth.mmd  README.md
infra/: README.md  SECURITY.md
infra/envs/: README.md
infra/runner/: README.md  check.sh  deploy.ps1  install-actionlint-deps.sh  install-docker.sh  install-node.sh
scripts/: apiops_adapter.py  drift_fanout.py  prune_plan.py  validate_config_tree.py
team-repo-template/: README.md
team-repo-template/.github/: CODEOWNERS
tests/unit/: conftest.py  test_apiops_adapter.py  test_backend_allowlist.py  test_base_inheritance.py  test_common.py  test_drift_fanout.py  test_freeze_workspace.py  test_inventory.py  test_kv_uri_allowlist.py  test_naming_convention.py  test_path_scope.py  test_run_all.py  (+5 more)
(+66 files in other folders)
